# back-tester

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ht1.md
scripts/: csv2feather.py  setup-aliases.sh
src/common/: Auxility.cpp  Auxility.hpp  BasicTypes.hpp  Dummy.cpp  LimitOrderBook.cpp  LimitOrderBook.hpp  MarketDataEvent.cpp  MarketDataEvent.hpp  MarketDataParser.cpp  MarketDataParser.hpp
src/ingestion/: DataIngestion.cpp  ThreadSafeQueue.hpp
src/main/: PresentToUser.cpp  PresentToUser.hpp  main.cpp
test/: BasicTypesTest.cpp  DataIngestionTest.cpp  LimitOrderBookTest.cpp  MarketDataEvent.cpp  MarketDataParser.cpp  TempFile.hpp
