[project]
name = "back-tester-cmf"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "CMF Team", email = "cmfteam2018@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
]

requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
notebooks = [
    "ipykernel>=6.0.0",
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
    "nbformat>=4.2.0"
]
